--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-    build:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,21 +23,23 @@ jobs:
           name: webpack artifacts
           path: public/
 
-    test:
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          os: [ubuntu-latest, windows-2016]
-          node-version: [12.x, 14.x]
-      steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install, and test
-        run: |
-          npm install
-          npm test
-        env:
-          CI: true
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    ...
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, and test
+      run: |
+        npm install
+        npm test
+      env:
+        CI: true
