--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,11 @@ jobs:
           npm run build
       - uses: actions/upload-artifact@main
         with:
-          name: webpack artifacts
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    - name: npm install, and test
           path: public/
 
   test:
